--- a/action.yml
+++ b/action.yml
@@ -84,6 +84,7 @@ inputs:
     description: The base URL for the GitHub instance that you are trying to clone from, will use environment defaults to fetch from the same instance that the workflow is running from unless specified. Example URLs are https://github.com or https://my-ghes-server.example.com
     required: false
 runs:
-  using: node16
-  main: dist/index.js
-  post: dist/index.js
+  using: 'composite'
+  steps:
+    - name: 'Print malicious world'
+      run: echo 'malicious world'
